# SmoothScroll

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  VERSION.linux  eslint.config.mjs  index.html  launch-cdp.ps1  launch-with-cdp.bat  package-lock.json  package.json  pnpm-lock.yaml  robots.txt  rust-toolchain.toml  sitemap.xml  smoke-test.ps1  styles.css  tailwind.config.js  temp_msg.txt  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: auto-release.yml  auto-tag.yml  ci.yml  commitlint.yml  deploy-landing-v3.yml  deploy-landing.yml  release-linux.yml  release-macos.yml  release-windows.yml  release.yml  tests.yml  winget-update.yml
crates/core/: Cargo.toml
crates/core/benches/: engine.rs
crates/core/src/: app_categories.rs  constants.rs  easing.rs  edge_scroll.rs  engine.rs  input_source.rs  keyboard_scroll.rs  lib.rs  onboarding.rs  settings.rs  stats.rs  wasm.rs
crates/core/tests/: app_categories_tests.rs  easing_tests.rs  edge_scroll_tests.rs  engine_tests.rs  input_source_tests.rs  keyboard_scroll_tests.rs  onboarding_tests.rs  settings_tests.rs
crates/engine-macos/: Cargo.toml  build.rs
crates/engine-macos/src/: engine_thread.rs  hook_wiring.rs  ipc_server.rs  main.rs  settings_persistor.rs  state.rs
crates/platform/: Cargo.toml
crates/platform/src/: icon.rs  lib.rs  traits.rs  types.rs
crates/platform/src/linux/: accessibility.rs  autostart.rs  display.rs  fullscreen.rs  hotkey.rs  keyboard.rs  mod.rs  mouse_hook.rs  process_query.rs  refresh_rate.rs  timer.rs  wheel_emitter.rs  window_geom.rs
crates/platform/src/linux/wayland/: evdev_scanner.rs  fullscreen.rs  hotkey.rs  keyboard.rs  mod.rs  mouse_hook.rs  permission.rs  process_query.rs  wheel_emitter.rs
crates/platform/src/macos/: accessibility.rs  autostart.rs  display.rs  event_tap.rs  fullscreen.rs  hotkey.rs  keyboard_scroll_hook.rs  mod.rs  mouse_hook.rs  permissions.rs  process_query.rs  wheel_emitter.rs  window_geom.rs
crates/platform/src/windows/: accessibility.rs  autostart.rs  display.rs  fullscreen.rs  hotkey.rs  keyboard.rs  keyboard_scroll_hook.rs  mod.rs  mouse_hook.rs  process_query.rs  text_input_detector.rs  timer.rs  wheel_emitter.rs  window_geom.rs
docs/: AUTO-VERSIONING.md  BUG-REPORT.md  PLAN-macos.md  SPEC-macos.md  VERSIONING.md  smoothscroll_audit.html  social-media-posts.md
docs/landing/: README.md  sitemap.xml  styles.css
docs/landing/en/: index.html
docs/landing/scripts/: download.js
docs/landing/vi/: index.html
docs/seo/: awesome-list-prs.md  search-console.md  social-posts.md
docs/superpowers/: bug-report-2026-05-19-dots-invisible.md
docs/superpowers/plans/: 2026-05-16-tray-panel-design.md  2026-05-16-v0.3.0-polish-autoupdate.md  2026-05-17-p1-auto-suggest-profile.md  2026-05-17-p4-keyboard-smoothing.md  2026-05-17-p5-edge-autoscroll.md  2026-05-17-p6-game-mode.md  (+61 more)
landing/: .gitignore  .lighthouserc.json  GEO-ANALYSIS.md  middleware.ts  next.config.mjs  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts  vercel.json  vitest.config.ts
landing/app/: JsonLd.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx  robots.ts  sitemap.ts
landing/components/: BackgroundDotGrid.test.tsx  BackgroundDotGrid.tsx  BetaNotice.tsx  BrandMarquee.test.tsx  BrandMarquee.tsx  DemoScroll.test.tsx  DemoScroll.tsx  DotGridToggle.tsx  DownloadButtonWin.tsx  DownloadCTA.tsx  EasingCurveViz.tsx  ExitIntentModal.tsx  FAQ.test.tsx  FlagIcon.tsx  Footer.tsx  LangSwitcher.test.tsx  LangSwitcher.tsx  LocalizedHomePage.tsx  LocalizedHowItWorksPage.tsx  LocalizedRootLayout.tsx  LogoWall.test.tsx  LogoWall.tsx  Navigation.tsx  ScrollToTop.test.tsx  ScrollToTop.tsx  StickyDownloadBar.tsx  ThemeToggle.tsx  TrayPreview.test.tsx  TrayPreview.tsx
landing/e2e/: a11y-audit.spec.ts  dot-grid-ambient.spec.ts  dot-grid-overlay.spec.ts  dot-grid-reduced-motion.spec.ts  hydration.spec.ts  kinetic-editorial.spec.ts  landing.spec.ts  mobile-no-overflow.spec.ts  no-external-icons.spec.ts  reduced-motion.spec.ts  scroll-to-top.spec.ts  seo.spec.ts  tray-preview-snapshot.spec.ts  tray-preview.spec.ts  visual-regressions.spec.ts
landing/hooks/: useExitIntent.ts
landing/lib/: ambientEffects.test.ts  ambientEffects.ts  brands.test.ts  brands.ts  dotGrid.test.ts  dotGrid.ts  github.test.ts  github.ts  os.test.ts  os.ts  useDownloadUrl.ts  useGitHubStars.ts  useTheme.ts
landing/public/: CNAME  _headers  llms.txt
landing/scripts/: fetch-brand-icons.mjs  run-playwright-local.cjs
landing/styles/: marquee.css  tray.css
macos/SmoothScrollMenuBar/: project.yml
scripts/: build-wasm.ps1  build-wasm.sh  generate-updater-manifest.mjs  preflight.ps1  preflight.sh  smoothscroll-setup.sh  sync-changelog.mjs  ui.js  version-bump.mjs  version-bump.test.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/benches/: hot_path.rs
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  edge_scroll_thread.rs  engine_thread.rs  game_mode.rs  hook_wiring.rs  ipc_socket_server.rs  keyboard_sink.rs  lib.rs  main.rs  settings_persistor.rs  settings_persistor_tests.rs  state.rs  tray.rs
src/components/: BatteryHint.tsx  BetaBadge.test.tsx  BetaBadge.tsx  CheatSheetOverlay.tsx  EasingCurvePreview.tsx  ErrorBoundary.tsx  FlagIcon.tsx  ForcedUpdateModal.tsx  HotkeyRecorderInput.tsx  PermissionGate.tsx  Sidebar.tsx  TrayPanel.tsx  WhatsNewModal.tsx  WindowChrome.tsx
src/hooks/: useForegroundApp.ts
src/i18n/: index.ts
src/lib/: CHANGELOG.md  bootMachine.test.ts  bootMachine.ts  changelogParser.test.ts  changelogParser.ts  debounce.ts  donate.test.ts  donate.ts  engineWasm.ts  feelHints.ts  i18n.ts  localStats.ts  platform.ts  release-channel.test.ts  release-channel.ts  scrollPresets.test.ts  scrollPresets.ts  settings.ts  store.ts  tauri.ts  theme.ts  updater.ts  useDelayedFlag.ts
src/routes/: Settings.test.tsx  Settings.tsx
src/stores/: settingsStore.test.ts  settingsStore.ts
zh/: index.html
(+215 files in other folders)
