[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/platform",
    "src-tauri",
]

[workspace.package]
version = "0.1.5"
edition = "2021"
rust-version = "1.95"
authors = ["SmoothScroll contributors"]
license = "MIT"
repository = "https://github.com/quangtruong2003/smoothscroll"

[workspace.dependencies]
# Internal
smoothscroll_core = { path = "crates/core" }
smoothscroll_platform = { path = "crates/platform" }

# Shared third-party
serde = { version = "1", features = ["derive"] }
serde_json = "1"
parking_lot = "0.12"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing-appender = "0.2"
directories = "5"

# Tauri
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
