[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/platform",
    "src-tauri",
]

[workspace.package]
version = "1.18.9"
edition = "2021"
rust-version = "1.95"
authors = ["SmoothScroll contributors"]
license = "LicenseRef-FSL-1.1-Apache-2.0"
repository = "https://github.com/quangtruong2003/smoothscroll"

[workspace.dependencies]
# Internal
smoothscroll_core = { path = "crates/core" }
smoothscroll_platform = { path = "crates/platform" }

# Shared third-party
serde = { version = "1", features = ["derive"] }
serde_json = "1"
parking_lot = "0.12"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing-appender = "0.2"
directories = "5"

# Tauri
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

# Fast local release builds for testing exe + installer + updater flow.
# Usage: npx tauri build --profile release-fast --bundles nsis
# Trade-offs vs `release`: ~3-5x faster link, larger binary (~20-30%),
# slightly slower runtime (negligible for this app's hot paths).
[profile.release-fast]
inherits = "release"
lto = false
codegen-units = 16
strip = false

# Fastest possible release build for iterating on Tauri/Rust changes.
# Usage: npx tauri build --profile release-dev --no-bundle
# Trade-offs: ~5-8x faster than `release` after warm cache,
# binary ~40-60% larger, no optimisation passes (still works fine).
[profile.release-dev]
inherits = "dev"
opt-level = 1
debug = false
incremental = true
codegen-units = 256

