[package]
name = "smoothscroll-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "SmoothScroll — cross-platform smooth scrolling"
default-run = "smoothscroll-app"

[lib]
name = "smoothscroll_app"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
smoothscroll_core = { workspace = true }
smoothscroll_platform = { workspace = true }
tauri = { workspace = true, features = ["tray-icon", "image-png"] }
serde = { workspace = true }
serde_json = { workspace = true }
parking_lot = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
directories = { workspace = true }

[features]
default = []
