[package]
name = "smoothscroll-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "SmoothScroll — cross-platform smooth scrolling"
default-run = "smoothscroll-app"

[lib]
name = "smoothscroll_app"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { workspace = true }
hostname = "0.4"

[dependencies]
smoothscroll_core = { workspace = true }
smoothscroll_platform = { workspace = true }
tauri = { workspace = true, features = ["tray-icon", "image-png"] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
serde = { workspace = true }
serde_json = { workspace = true }
parking_lot = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
directories = { workspace = true }
uuid = { version = "1", features = ["v4"] }
hostname = "0.4"
arc-swap = "1"
crossbeam-channel = "0.5"
tauri-plugin-single-instance = "2"
sentry = { version = "0.32", features = ["backtrace"] }
sentry-tracing = "0.32"

[target.'cfg(target_os = "macos")'.dependencies]
# tokio is provided transitively by tauri v2
tokio = { version = "1", features = ["net", "rt-multi-thread", "sync", "io-util"] }

[target.'cfg(target_os = "linux")'.dependencies]
x11 = { version = "2.21", features = ["xlib"] }

[dev-dependencies]
criterion = { version = "0.5", default-features = false }

[[bench]]
name = "hot_path"
harness = false

[features]
default = []

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_UI_WindowsAndMessaging"] }
windows-sys = { version = "0.59", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }
