[package]
name = "smoothscroll_core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Pure scroll engine logic for SmoothScroll"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
directories = { workspace = true }

[dev-dependencies]
approx = "0.5"
