[package]
name = "smoothscroll_core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Pure scroll engine logic for SmoothScroll"

[lib]
crate-type = ["cdylib", "rlib"]

# wasm-pack: disable wasm-opt entirely. The bundled wasm-opt on CI runners
# rejects bulk-memory ops emitted by recent wasm-bindgen, and the engine
# bundle is small enough (~30KB) that the extra optimization isn't worth
# the toolchain headache. Rust release codegen still applies.
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[features]
default = []
wasm = ["dep:wasm-bindgen"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
directories = { workspace = true }
parking_lot = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2", optional = true }

[dev-dependencies]
approx = "0.5"
criterion = { version = "0.5", default-features = false }
tempfile = "3.27.0"

[[bench]]
name = "engine"
harness = false
