[package]
name = "smoothscroll-engine-macos"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Standalone macOS engine binary for SmoothScroll"

[dependencies]
smoothscroll_core = { workspace = true }
smoothscroll_platform = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
parking_lot = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
directories = { workspace = true }
tokio = { version = "1", features = ["net", "rt-multi-thread", "sync", "io-util", "macros"] }
arc-swap = "1"
