[package]
name = "smoothscroll_platform"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "OS abstractions for SmoothScroll (Windows + macOS)"

[dependencies]
smoothscroll_core = { workspace = true }
serde = { workspace = true }
parking_lot = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_Graphics_Gdi",
    "Win32_System_Registry",
    "Win32_Media",
] }
windows = { version = "0.58", features = [
    "Win32_UI_Accessibility",
    "Win32_System_Com",
] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { version = "0.5", default-features = false, features = ["std"] }
objc2-app-kit = { version = "0.2", default-features = false, features = [
    "std",
    "NSWorkspace",
    "NSRunningApplication",
    "NSResponder",
] }
objc2-foundation = { version = "0.2", default-features = false, features = [
    "std",
    "NSString",
] }
core-foundation = "0.10"
core-graphics = "0.19"

# No target-specific deps for non-macOS
[target.'cfg(not(target_os = "macos"))'.dependencies]
